--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+:root {
+    --clr-bg-dark: #1f2937; /* gray-800 */
+    --clr-bg-light: #fafafa; /* zinc-50 */
+
+    --clr-text-dark: #1f2937; /* gray-200 */
+    --clr-text-light: #fafafa; /* zinc-50 */
+}
+
+html {
+    background-color: var(--clr-bg-light);
+    color: var(--clr-text-dark);
+}
+
+.dark {
+    background-color: var(--clr-bg-dark);
+    color: var(--clr-text-light);
+}
+
