--- a/src/index.css
+++ b/src/index.css
@@ -2,21 +2,12 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-:root {
-    --clr-bg-dark: #1f2937; /* gray-800 */
-    --clr-bg-light: #fafafa; /* zinc-50 */
-
-    --clr-text-dark: #1f2937; /* gray-200 */
-    --clr-text-light: #fafafa; /* zinc-50 */
-}
-
-html {
-    background-color: var(--clr-bg-light);
-    color: var(--clr-text-dark);
-}
-
-.dark {
-    background-color: var(--clr-bg-dark);
-    color: var(--clr-text-light);
+@layer base {
+    html {
+        @apply scroll-smooth
+    }
+    body {
+        @apply bg-slate-900 leading-relaxed text-slate-400 antialiased selection:bg-teal-300 selection:text-teal-900
+    }
 }
 
